// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList Component should render EmptyState when list is empty 1`] = `
<RCTScrollView
  ListEmptyComponent={<Unknown />}
  data={Array []}
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "width": "100%",
      },
    ]
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={5}
>
  <View>
    <Text>
      Empty State
    </Text>
  </View>
</RCTScrollView>
`;

exports[`TaskList Component should render tasks correctly 1`] = `
<RCTScrollView
  ListEmptyComponent={<Unknown />}
  data={
    Array [
      Object {
        "archived": false,
        "category": "none",
        "createdAt": "2023-01-01T12:00:00.000Z",
        "deadline": null,
        "done": false,
        "id": "1",
        "priority": "none",
        "repeat": "none",
        "task": "Task 1",
      },
      Object {
        "archived": false,
        "category": "none",
        "createdAt": "2023-01-01T12:00:00.000Z",
        "deadline": null,
        "done": true,
        "id": "2",
        "priority": "none",
        "repeat": "none",
        "task": "Task 2",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "width": "100%",
      },
    ]
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={5}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        Task 1
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <Text>
        Task 2
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
